<resources>
    <string name="app_name">RoadSignTestApp</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="question">Question</string>
    <string name="fork_sign">Fork Sign</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="image_of_a_stop_sign">Image of a stop sign</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
</resources>